Follow buttons next to subscribe

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -2138,6 +2138,9 @@ body:not(.post-template) .post-title {
   }
 }
 
+.follow {
+    float: right;
+}
 
 /* ==========================================================================
    End of file. Animations should be the last thing here. Do not add stuff
