--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -14,6 +14,8 @@
         {{ if .Site.Params.logo }}
             <a class="blog-logo" href="{{ .Permalink }}"><img src="{{ .Site.Params.logo  | relURL}}" alt="Blog Logo" /></a>
         {{end}}
+        <div class="follow">
+        {{ partial "social.html" . }}
         {{ if .Site.Menus.main }}
             <a class="menu-button" href="#"><span class="burger">&#9776;</span><span class="word">Menu</span></a>
         {{else}}
@@ -23,10 +25,10 @@
               <a class="menu-button icon-feed" href="{{ .RSSLink }}">&nbsp;&nbsp;Subscribe</a>
             {{end}}
         {{end}}
+        </div>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
-            {{ partial "social.html" . }}
             <h1 class="page-title">{{ .Site.Title }}</h1>
             <h2 class="page-description">{{ .Site.Params.description }}</h2>
         </div>
