--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,11 +15,14 @@
   {{ if .Site.Params.logo }}
       <a class="blog-logo" href="{{.Site.BaseURL}}"><img src="{{ .Site.Params.logo | relURL}}" alt="Home" /></a>
   {{end}}
-  {{ if .Site.Menus.main }}
-      <a class="menu-button" href="#"><span class="burger">&#9776;</span><span class="word">Menu</span></a>
-  {{else}}
-      <a class="menu-button icon-feed" href="{{ "index.xml"| relURL}}" >&nbsp;&nbsp;Subscribe</a>
-  {{end}}
+  <div class="follow">
+    {{ partial "social.html" . }}
+    {{ if .Site.Menus.main }}
+        <a class="menu-button" href="#"><span class="burger">&#9776;</span><span class="word">Menu</span></a>
+    {{else}}
+        <a class="menu-button icon-feed" href="{{ "index.xml"| relURL}}" >&nbsp;&nbsp;Subscribe</a>
+    {{end}}
+  </div>
   </nav>
 </header>
 
